data/all_generated_tests/raw_wast_tests/call_indirect_IncorrectBranchTargetResolution_3901.wast
;; 10. **Test Description:**    Submit a `call_indirect` instruction calling a function that includes multiple labels and branches (`br_if`). Design a conditional branching sequence to discern whether each conditional branch correctly lands at the expected label. Compare stack status post-branch to verify expected outcomes.

(assert_invalid
  (module
    (type (func (param i32) (result i32)))
    (table 1 funcref)
    (elem (i32.const 0) $f)
    (func $f (param i32) (result i32)
      (local.get 0)
      (i32.const 0)
      (br_if 0)
      (i32.const 1)
      (br_if 0)
      (i32.const 2)
    )
    (func (call_indirect (type 0) (i32.const 0) (i32.const 0)))
  )
  "type mismatch"
)